[package]
authors = ["EP. <eupn@pm.me>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Peripheral access API for NXP QN908x SoC"
documentation = "https://docs.rs/qn908x-rs"
keywords = ["arm", "cortex-m", "qn908x", "svd2rust"]
license = "MIT OR Apache-2.0"
name = "qn908x-rs"
repository = "https://github.com/eupn/qn908x-rs"
version = "0.0.1"

[dependencies]
bare-metal = "0.1.0"
cortex-m = "0.4.3"
vcell = "0.1.0"

[dependencies.cortex-m-rt]
optional = true
version = "0.3.0"

[features]
rt = ["cortex-m-rt"]